renamed all the files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>AGE CALCULATOR APP</title>
-        <link href="css/age-calculator.css" type="text/css"   rel="stylesheet">
+        <link href="age-calculator.css" type="text/css"   rel="stylesheet">
     </head>
     <body>
         <div class="container">
