Style changes done

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>AGE CALCULATOR APP</title>
-        <link href="age-calculator.css" type="text/css"   rel="stylesheet">
+        <link href="style.css" type="text/css"   rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -67,6 +67,6 @@
                 </div>
             </div>
         </div> 
-     <script src="age-calculator.js"></script>
+     <script src="script.js"></script>
     </body>
 </html>
